versions/1.21/translated/ru_ru/develop/sounds/custom.md
---
title: Создание своих звуков
description: Вы научите добавлять и использовать новые звуки с реестром.
authors:
  - JR1811

search: false
---

# Создание своих звуков {#creating-custom-sounds}

## Подготовка аудиофайла {#preparing-the-audio-file}

Нужно отформатировать ваш аудиофайл определённым образом. OGG Vorbis - это открытый формат для мультимедийных данных, например аудио, и используется в качестве звуковых файлов Minecraft. Чтобы избежать проблем с тем, как Minecraft обрабатывает дистанцию, вашему аудио нужно иметь только один канал (Mono).

Многие современные программы ЦЗРС (Цифровая звуковая рабочая станция) могут импортировать и экспортировать файлы этого формата. В следующем примере для приведения файла в правильный формат будет использован "[Audacity](https://www.audacityteam.org/)", или любая другая ЦЗРС программа.

![Неподготовленный файл в Audacity](/assets/develop/sounds/custom_sounds_0.png)

В этом примере звук [свисток](https://freesound.org/people/strongbot/sounds/568995/) был импортирован в Audacity. Обычно он сохраняется как файл `.wav` и имеет два аудио канала (Stereo). Отредактируйте звук по своему вкусу и удалите один из каналов, используя раскрывающийся элемент наверху "track head".

![Разделение Стерео трека](/assets/develop/sounds/custom_sounds_1.png)

![Удаление одного из каналов](/assets/develop/sounds/custom_sounds_2.png)

Когда вы экспортируете или рендерите аудиофайл, выберите формат файла OGG. Некоторые ЦЗРС, например REAPER, могут поддерживать несколько форматов слоёв OGG. В этом случае OGG Vorbis должен работать нормально.

![Экспорт как OGG файл](/assets/develop/sounds/custom_sounds_3.png)

Также имейте в виду, что аудиофайлы могут значительно увеличить размер вашего мода. При необходимости сожмите звук, когда редактируйте и экспортируйте файл, чтобы свести размер файла к минимуму.

## Загрузка аудиофайла {#loading-the-audio-file}

Добавьте новую директорию `resources/assets/<mod id here>/sounds` для звуков в вашем моду, и положите в неё экспортированный аудиофайл `metal_whistle.ogg`.

Дальше создайте файл `resources/assets/<mod id here>/sounds.json`, если он не существует и добавьте ваш звук в звуковые записи.

@[code lang=json](@/reference/1.21/src/main/resources/assets/fabric-docs-reference/sounds.json)

Запись подписи предоставляет больше контекста для игрока. Название подписи используется в языковых файлах в директории `resources/assets/<mod id here>/lang` и будет показываться, если включена настройка и звук воспроизводиться.

## Регистрация своего звука {#registering-the-custom-sound}

Чтобы добавить собственный звук в мод, зарегистрируете в классе SoundEvent, который имплементирует точку входа `ModInitializer`.

```java
Registry.register(Registries.SOUND_EVENT, Identifier.of(MOD_ID, "metal_whistle"),
        SoundEvent.of(Identifier.of(MOD_ID, "metal_whistle")));
```

## Чистка беспорядка {#cleaning-up-the-mess}

В зависимости насколько много записей реестра находится, это может превратиться в беспорядок. Чтобы обойти это, мы должны сделать использование нового класса помощника.

Добавьте два новых метода для ранее созданного класса помощника. Первый регистрирует все звуки и используется для инициализации этого класса на первом месте. После этого вы можете добавить в новый статический класс `SoundEvent` нужные переменные.

@[code lang=java transcludeWith=:::1](@/reference/1.21/src/main/java/com/example/docs/sound/CustomSounds.java)

`ModInitializer` имплементируют точки входа которые нужны классу, чтобы имплементировать весь реестр с собственными SoundEvents.

@[code lang=java transcludeWith=:::2](@/reference/1.21/src/main/java/com/example/docs/sound/FabricDocsReferenceSounds.java)

## Используйте собственные SoundEvent'ы {#using-the-custom-soundevent}

Используйте класс помощник для доступа к собственному SoundEvent. Просмотрите страницу [Воспроизводящиеся SoundEvent'ы](./using-sounds), чтобы научиться как воспроизводить звуки.
