versions/1.21.4/translated/ru_ru/develop/sounds/custom.md
---
title: Создание своих звуков
description: Вы научите добавлять и использовать новые звуки с реестром.
authors:
  - JR1811
---

## Создание своих звуков {#creating-custom-sounds}

Нужно отформатировать ваш аудиофайл определённым образом. OGG Vorbis - это открытый формат для мультимедийных данных, например аудио, и используется в качестве звуковых файлов Minecraft. Чтобы избежать проблем с тем, как Minecraft обрабатывает дистанцию, вашему аудио нужно иметь только один канал (Mono).

Многие современные программы ЦЗРС (Цифровая звуковая рабочая станция) могут импортировать и экспортировать файлы этого формата. В следующем примере для приведения файла в правильный формат будет использован "[Audacity](https://www.audacityteam.org/)", или любая другая ЦЗРС программа.

![Неподготовленный файл в Audacity](/assets/develop/sounds/custom_sounds_0.png)

В этом примере звук [свисток](https://freesound.org/people/strongbot/sounds/568995/) был импортирован в Audacity. Обычно он сохраняется как файл `.wav` и имеет два аудио канала (Stereo). Отредактируйте звук по своему вкусу и удалите один из каналов, используя раскрывающийся элемент наверху "track head".

![Разделение Стерео трека](/assets/develop/sounds/custom_sounds_1.png)

![Удаление одного из каналов](/assets/develop/sounds/custom_sounds_2.png)

Когда вы экспортируете или рендерите аудиофайл, выберите формат файла OGG. Некоторые ЦЗРС, например REAPER, могут поддерживать несколько форматов слоёв OGG. В этом случае OGG Vorbis должен работать нормально.

![Экспорт как OGG файл](/assets/develop/sounds/custom_sounds_3.png)

Также имейте в виду, что аудиофайлы могут значительно увеличить размер вашего мода. При необходимости сожмите звук, когда редактируйте и экспортируйте файл, чтобы свести размер файла к минимуму.

## Загрузка аудиофайла {#loading-the-audio-file}

Добавьте новую директорию `resources/assets/mod-id/sounds` для звуков в вашем моду, и положите в неё экспортированный аудиофайл `metal_whistle.ogg`.

Дальше создайте файл `resources/assets/mod-id/sounds.json`, если он не существует и добавьте ваш звук в звуковые записи.

@[code lang=json](@/reference/1.21.4/src/main/resources/assets/fabric-docs-reference/sounds.json)

Запись подписи предоставляет больше контекста для игрока. Название подписи используется в языковых файлах в директории `resources/assets/mod-id/lang` и будет показываться, если включена настройка и звук воспроизводиться.

## Регистрация своего звука {#registering-the-custom-sound}

Чтобы добавить собственный звук в мод, зарегистрируйте SoundEvent в вашем [инициализаторе мода](./getting-started/project-structure#entrypoints).

```java
Registry.register(BuiltInRegistriesSOUND_EVENT, ResourceLocation.fromNamespaceAndPath(MOD_ID, "metal_whistle"),
        SoundEvent.of(ResourceLocation.fromNamespaceAndPath(MOD_ID, "metal_whistle")));
```

## Чистка беспорядка {#cleaning-up-the-mess}

В зависимости насколько много записей реестра находится, это может превратиться в беспорядок. Чтобы обойти это, мы должны сделать использование нового класса помощника.

Добавьте два новых метода для ранее созданного класса помощника. Первый регистрирует все звуки и используется для инициализации этого класса на первом месте. После этого вы можете добавить в новый статический класс `SoundEvent` нужные переменные.

@[code lang=java transcludeWith=:::1](@/reference/1.21.4/src/main/java/com/example/docs/sound/CustomSounds.java)

Таким образом, инициализатору мода достаточно реализовать только одну строку для регистрации всех пользовательских SoundEvents.

@[code lang=java transcludeWith=:::2](@/reference/1.21.4/src/main/java/com/example/docs/sound/FabricDocsReferenceSounds.java)

## Используйте собственные SoundEvent'ы {#using-the-custom-soundevent}

Используйте класс помощник для доступа к собственному SoundEvent. Посетите страницу [Playing SoundEvents](./using-sounds), чтобы узнать, как воспроизводить звуки.
